--- a/S04.02-Exercise-DisplayDayForecast/app/src/main/res/layout/activity_detail.xml
+++ b/S04.02-Exercise-DisplayDayForecast/app/src/main/res/layout/activity_detail.xml
@@ -3,4 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tv_weather_display"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </FrameLayout>
