--- a/S04.03-Exercise-AddMapAndSharing/app/src/main/res/menu/forecast.xml
+++ b/S04.03-Exercise-AddMapAndSharing/app/src/main/res/menu/forecast.xml
@@ -24,5 +24,10 @@
         android:orderInCategory="1"
         android:title="@string/action_refresh"
         app:showAsAction="ifRoom"/>
-    <!--TODO (1) Add a menu item to open the map-->
+    <!--DONE (1) Add a menu item to open the map-->
+    <item
+        android:id="@+id/action_open_map"
+        android:orderInCategory="2"
+        android:title="Open the map"
+        app:showAsAction="ifRoom" />
 </menu>
