--- a/S12.02-Exercise-Styles/app/src/main/res/values/styles.xml
+++ b/S12.02-Exercise-Styles/app/src/main/res/values/styles.xml
@@ -25,12 +25,30 @@
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
     </style>
 
-    <!-- TODO (1) Create a style that shows a Sunshine logo instead of a title -->
+    <!-- DONE (1) Create a style that shows a Sunshine logo instead of a title -->
+    <style name="ActionBar.Solid.Sunshine.NoTitle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="android:displayOptions">useLogo|showHome</item>
+        <item name="android:logo">@drawable/ic_logo</item>
+    </style>
 
-    <!-- TODO (2) Create a style for MainActivity called AppTheme.Forecast that uses our custom ActionBar style -->
+    <!-- DONE (2) Create a style for MainActivity called AppTheme.Forecast that uses our custom ActionBar style -->
+    <style name="AppTheme.Forecast" parent="AppTheme">
+        <item name="actionBarStyle">@style/ActionBar.Solid.Sunshine.NoTitle</item>
+    </style>
 
-    <!-- TODO (3) Create the DetailLabel style -->
+    <!-- DONE (3) Create the DetailLabel style -->
+    <style name="DetailLabel" parent="TextAppearance.AppCompat.Title">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/detail_accent_label</item>
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
 
-    <!-- TODO (4) Create the ExtraWeatherMeasurement style -->
+    <!-- DONE (4) Create the ExtraWeatherMeasurement style -->
+    <style name="ExtraWeatherMeasurement" parent="TextAppearance.AppCompat.Headline">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
 </resources>
